--- a/content/contactus.html
+++ b/content/contactus.html
@@ -1,6 +1,26 @@
 ---
-title: "Contactus"
+title: "Contact Us"
 draft: false
 ---
 
-<h1> contactus </h1>
+<section class="py-20 px-4">
+  <div class="max-w-4xl mx-auto text-center mb-10">
+    <h2 class="text-4xl font-bold mb-2">Send us a Message</h2>
+    <p class="text-lg">
+      Fill out the form below and we'll get back to you shortly.
+    </p>
+  </div>
+  <div class="rounded-lg shadow-lg overflow-hidden max-w-4xl mx-auto p-4">
+    <iframe
+      src="https://docs.google.com/forms/d/e/1FAIpQLSfwwm92TgjaBghowF4MUECsST-icguBxCEm0F60GyoebJwPoQ/viewform?embedded=true"
+      width="100%"
+      height="1200"
+      frameborder="0"
+      marginheight="0"
+      marginwidth="0"
+      class="w-full"
+    >
+      Loading…
+    </iframe>
+  </div>
+</section>
