--- a/content/ai_page.html
+++ b/content/ai_page.html
@@ -6,7 +6,7 @@ draft: false
 <section
   x-data="{ visible: false }"
   x-init="setTimeout(() => visible = true, 200)"
-  class="bg-black text-white min-h-screen py-28 px-6 md:px-12 overflow-hidden"
+  class="bg-[#090619] text-white min-h-screen py-28 px-6 md:px-12 overflow-hidden"
 >
   <!-- BACKGROUND GRADIENT GLOW -->
 
@@ -19,7 +19,7 @@ draft: false
       x-transition:enter-end="opacity-100 translate-y-0"
     >
       <h1
-        class="text-5xl mb-10 md:text-7xl font-bold leading-relaxed bg-gradient-to-r from-blue-500 via-white to-green-500 text-transparent bg-clip-text"
+        class="text-5xl mb-10 md:text-7xl font-bold leading-relaxed bg-gradient-to-r from-blue-500 via-green-300 to-green-500 text-transparent bg-clip-text"
       >
         Intelligence Has Evolved
       </h1>
