--- a/content/analytics.html
+++ b/content/analytics.html
@@ -13,21 +13,27 @@ draft: false
 >
   <!-- Hero Section -->
   <div
-    class="w-full h-[700px] max-sm:h-[350px] flex flex-col justify-around relative bg-cover bg-center"
-    style="background-image: url('/images/whale-algo.png');"
+    class="w-full h-[500px] max-sm:h-[350px] flex flex-col justify-around relative bg-cover bg-center"
   >
-    <div class="ml-20 max-sm:ml-5">
-      <h1 class="text-[5rem] max-sm:text-5xl leading-tight text-white">
-        Analytics
-      </h1>
-    </div>
-    <div
-      class="flex justify-center items-center max-sm:items-start max-sm:justify-center"
-    >
-      <div class="flex flex-col text-right max-sm:text-left">
-        <span class="text-lg text-white"
-          >“ Data-driven Innovation in Financial Markets ”</span
+    <div class="grid grid-cols-2 ml-20 max-sm:ml-5">
+      <div class="flex flex-col justify-around">
+        <div>
+          <h1 class="text-[5rem] max-sm:text-5xl leading-tight text-white">
+            Analytics
+          </h1>
+        </div>
+        <div
+          class="flex justify-center items-center max-sm:items-start max-sm:justify-center"
         >
+          <div class="flex flex-col text-right max-sm:text-left">
+            <span class="text-lg text-white"
+              >“ Data-driven Innovation in Financial Markets ”</span
+            >
+          </div>
+        </div>
+      </div>
+      <div>
+        <img src="/images/analytic.png" class="w-[400px]" />
       </div>
     </div>
   </div>
