--- a/content/algorithmic-platform.html
+++ b/content/algorithmic-platform.html
@@ -133,29 +133,230 @@
   </div>
 
   <!-- Platform Overview -->
-  <section class="overview w-full py-20 text-center text-white">
-    <div class="w-5/6 mx-auto">
-      <h3 class="text-4xl font-semibold mb-6 text-gray-100">
-        Platform Overview
-      </h3>
-      <div class="w-full md:w-3/4 mx-auto">
-        <p class="text-lg font-light text-gray-300 mb-6">
-          The Algorithmic Platform provides robust infrastructure for
-          algorithmic trading. It features a powerful set of tools for
-          designing, implementing, testing, and deploying trading strategies
-          with precision.
-        </p>
-        <p class="text-lg font-light text-gray-300">
-          Whether you’re working on simple or complex strategies, the platform’s
-          modular and scalable architecture ensures that it can meet the demands
-          of any market condition.
-        </p>
+  <section
+    class="w-full flex flex-col justify-evenly text-center text-white p-20 overflow-hidden"
+  >
+    <div class="relative">
+      <div class="absolute">
+        <img src="/images/Ellipse.svg" class="opacity-40" />
+      </div>
+    </div>
+    <div class="grid grid-cols-3 gap-20 z-20">
+      <div class="h-[500px] w-[350px] flex flex-col justify-center">
+        <div class="h-[250px] flex justify-center mb-10">
+          <img src="/images/icons/buy-and-sell.svg" class="h-[240px]" />
+        </div>
+        <div class="title h-10 mb-5">
+          <h2 class="text-3xl font-semibold">Buy & Sell Side</h2>
+        </div>
+        <div>
+          <span
+            >The Algorithmic Container supports both agency and proprietary
+            trading. While their setups differ, the same execution and
+            alpha-seeking algorithms can be used to reduce slippage and improve
+            performance, within regulatory limits.</span
+          >
+        </div>
+      </div>
+      <div class="h-[500px] w-[350px] flex flex-col justify-center">
+        <div class="h-[250px] flex justify-center mb-10">
+          <img src="/images/icons/multi-asset.svg" class="h-[240px]" />
+        </div>
+        <div class="title h-10 mb-5">
+          <h2 class="text-3xl font-semibold">Buy & Sell Side</h2>
+        </div>
+        <div>
+          <span
+            >The Algorithmic Container supports both agency and proprietary
+            trading. While their setups differ, the same execution and
+            alpha-seeking algorithms can be used to reduce slippage and improve
+            performance, within regulatory limits.</span
+          >
+        </div>
+      </div>
+      <div class="h-[500px] w-[350px] flex flex-col justify-center">
+        <div class="h-[250px] flex justify-center mb-10">
+          <img src="/images/icons/composite-strategies.svg" class="h-[240px]" />
+        </div>
+        <div class="title h-10 mb-5">
+          <h2 class="text-3xl font-semibold">Buy & Sell Side</h2>
+        </div>
+        <div>
+          <span
+            >The Algorithmic Container supports both agency and proprietary
+            trading. While their setups differ, the same execution and
+            alpha-seeking algorithms can be used to reduce slippage and improve
+            performance, within regulatory limits.</span
+          >
+        </div>
       </div>
     </div>
   </section>
 
+  <section
+    x-data="typingList()"
+    x-intersect.once="startTyping()"
+    class="bg-white w-full grid grid-cols-3 p-20"
+  >
+    <div
+      class="w-full h-[700px] col-span-2 sm:w-[700px] max-w-full bg-[#121010] text-white rounded-2xl overflow-hidden z-20 shadow-lg shadow-black"
+    >
+      <!-- Code Block Header -->
+      <div
+        class="p-4 border-b bg-[#201b1b] border-gray-700 flex items-center space-x-1"
+      >
+        <div class="w-3 h-3 bg-red-500 rounded-full"></div>
+        <div class="w-3 h-3 bg-yellow-500 rounded-full"></div>
+        <div class="w-3 h-3 bg-green-500 rounded-full"></div>
+        <div class="pl-5">
+          <span class="text-gray-400 text-sm">
+            algoteq_systems.js
+          </span>
+        </div>
+      </div>
+      <div class="max-w-4xl mx-auto p-10 font-mono">
+        <h2 class="text-2xl mb-6 text-green-500">Trading Simulator</h2>
+
+        <p class="mb-6">
+          As a test harness for prototyping quantitative ideas and a
+          <span class="text-yellow-500">“debugger”</span>
+          for <span class="text-yellow-500">troubleshooting</span>,
+          <span class="text-yellow-500">refining</span> and
+          <span class="text-yellow-500">testing</span> strategies, we
+          incorporate the
+          <span class="text-yellow-500">Trading Simulator</span>. The simulator
+          is an intrinsic part of the platform and can be an invaluable tool
+          for:
+        </p>
+
+        <ul class="list-disc list-inside space-y-3 text-base">
+          <template x-for="(item, index) in typedItems" :key="index">
+            <li
+              x-text="item + (index === currentTypingIndex ? cursor : '')"
+            ></li>
+          </template>
+        </ul>
+      </div>
+    </div>
+    <div>
+      <img src="/images/imac-screen.png" class="w-[700px] absolute" />
+    </div>
+  </section>
+
   <!-- Divider -->
+  <div class="w-full h-1 bg-gradient-to-r from-[#00AA00] to-[#539AFD]"></div>
+  <!-- Introduction Section -->
   <div
-    class="w-full h-1 bg-gradient-to-r from-[#00AA00] to-[#539AFD] mt-10"
-  ></div>
+    class="w-full max-h-max max-sm:max-h-screen grid grid-cols-2 max-sm:flex bg-[#090619] text-white text-left py-20 max-sm:py-10"
+    x-intersect:enter="shown = true"
+  >
+    <!-- IMAGE on Left -->
+    <div
+      class="image-feature flex justify-center items-center absolute sm:static -left-28 w-auto order-1 max-sm:order-2"
+      x-show="shown"
+      x-transition:enter="transition ease-out duration-1000 delay-50"
+      x-transition:enter-start="opacity-0 translate-x-12"
+      x-transition:enter-end="opacity-100 translate-x-0"
+    >
+      <div
+        class="w-[5px] h-[00px] mr-10"
+        style="background: linear-gradient(to bottom, #00aa00, #539afd);"
+      ></div>
+      <img src="/images/imac-binance.png" class="w-auto h-[500px]" />
+    </div>
+
+    <!-- TEXT on Right -->
+    <div
+      class="w-auto md:w-3/4 max-sm:w-11/12 mx-auto order-2 max-sm:order-1"
+      x-data="{
+      shown: true,
+      open: null,
+      items: [
+        {
+          title: 'Functional Layers',
+          content: 'The Functional Layers are the specialised processing layers that constitute the Assembly Line, a complex event processing (CEP) pipeline structured as a chain of responsibility...'
+        },
+        {
+          title: 'Services',
+          content: 'The Services are required by a Strategy to carry out its essential functions, be it trading, surveillance and monitoring, or management of other strategies...'
+        },
+        {
+          title: 'Managers',
+          content: 'The Managers complement the Services by providing additional functionality and standardising the interactions with the Container...'
+        },
+        {
+          title: 'Reporting',
+          content: 'The event-driven and transactional nature of the system allows us to capture all the system and business events that improves the transparency...'
+        },
+        {
+          title: 'Data Retention',
+          content: 'The historical data outside of the trading session is retained in a decoupled long-term storage. Custom components support real-time long-term data persistence and retrieval...'
+        },
+        {
+          title: 'Flexible Strategy Order Hierarchy',
+          content: 'We avoid rigid order hierarchies and support N levels of strategy order nesting...'
+        },
+        {
+          title: 'Powerful Order Routing',
+          content: 'We employ a DSL-driven routing engine to manage business flow segmentation, enrichment, validation, and custom behaviours...'
+        },
+        {
+          title: 'Testing Philosophy',
+          content: 'Our testing focuses on unit tests, integration, performance and stress testing. We use model-driven test generation to simulate millions of events in a single run...'
+        },
+        {
+          title: 'Deployment Configuration',
+          content: 'We can cater for highly distributed, localised and co-located deployment configurations.'
+        },
+        {
+          title: 'Maintenance',
+          content: 'The system is modular, documented, and supports updates without full re-deployment.'
+        },
+        {
+          title: 'Support',
+          content: 'We provide ongoing support and training across all levels including emergency production handling.'
+        }
+      ]
+    }"
+      x-show="shown"
+      x-transition:enter="transition ease-out duration-1000 delay-50"
+      x-transition:enter-start="opacity-0 translate-y-12"
+      x-transition:enter-end="opacity-100 translate-y-0"
+    >
+      <h2 class="text-5xl max-sm:text-4xl font-semibold mb-6">
+        Architectural Principles
+      </h2>
+
+      <div class="flex flex-col gap-1 text-left text-base">
+        <template x-for="(item, index) in items" :key="index">
+          <div
+            class="bg-[#090619] border-b-[1px] rounded-sm py-2 transition duration-500"
+          >
+            <button
+              class="w-full flex justify-between items-center font-semibold text-lg cursor-pointer"
+              @click="open === index ? open = null : open = index"
+            >
+              <span x-text="item.title"></span>
+              <span
+                class="text-[30px] font-thin transition-transform duration-300"
+                :class="open === index ? 'rotate-45' : ''"
+              >
+                +
+              </span>
+            </button>
+            <div
+              x-show="open === index"
+              x-transition
+              class="text-sm leading-relaxed mt-2"
+            >
+              <p x-text="item.content" class="pr-10"></p>
+            </div>
+          </div>
+        </template>
+      </div>
+    </div>
+  </div>
+
+  <!-- Divider -->
+  <div class="w-full h-1 bg-gradient-to-r from-[#00AA00] to-[#539AFD]"></div>
 </div>
